# paper

./: .gitignore  Aztecs.lhs  CHANGELOG.md  README.md  aztecs-paper.cabal  aztecs.lhs  aztecs.tex  build.sh  haskell.fmt  references.bib
