cabal-version:   3.0
name:            aztecs-paper
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      matt@hunzinger.me
author:          Matt Hunzinger
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:  Aztecs
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.20.0.0,
        aztecs ^>=0.4.0.0
